2007-02-14  Akim Demaille  <akim.demaille@free.fr>

	Cleaning
	* src/uobject.cc: Spaces, identifiers, scopes.

2007-02-14  Akim Demaille  <akim.demaille@free.fr>

	Respect the tradition
	* src/uobject.cc: For iterator names.

2007-02-14  Akim Demaille  <akim.demaille@free.fr>

	Process doc last
	* Makefile.am (SUBDIRS): here.

2007-02-14  Akim Demaille  <demaille@gostai.com>

	Query replace regexp:
	STREQ *(\(.*?\)->str(), *\([^)]*\)) -> *\1 == \2

2007-02-13  Akim Demaille  <akim.demaille@free.fr>

	Bug fix
	* src/uexpression.cc (UExpression::UExpression): Use t, not type,
	which is not yet defined.

2007-02-13  Akim Demaille  <akim.demaille@free.fr>

	Use operator== for UString
	* src/ucommand.cc: here.

2007-02-13  Akim Demaille  <demaille@gostai.com>

	Let UGroup own their memory
	* src/ugroup.hh, src/ugroup.cc (name): Now an UString.
	Remove the ctor taking char*.
	* src/ucommand.cc, src/uobject.cc:
	Adjust.

2007-02-13  Akim Demaille  <demaille@gostai.com>

	Pretend C++ support assignment operators
	* src/ustring.hh, src/ustring.cc (update): Remove.
	(operator=): New.
	* src/ucommand.cc, src/uconnection.cc, src/uexpression.cc,
	* src/userver.cc, src/uvariable.cc, src/uvariablename.cc:
	Use them.

2007-02-13  Akim Demaille  <demaille@gostai.com>

	/! Dangerous checkin
	* src/memorymanager/blockmemorymanager.hh: Add a placement new
	to please mipsel-linux-g++-3.3.2.
	I'm not used to write placement new operators, and I'm really
	afraid of what is needed for the delete operator...
	I'm have to study books to ensure this is not completely
	fucked up.

2007-02-13  Akim Demaille  <demaille@gostai.com>

	Pretend we program in C++ and use operators
	* src/ustring.hh, src/ustring.cc (equal): Remove, replaced by...
	(operator==): these two.
	* src/ubinder.cc, src/ucommand.cc, src/uconnection.cc,
	* src/ueventhandler.cc, src/uexpression.cc, src/uobj.cc,
	* src/uvariablename.cc: Use them.

2007-02-13  Akim Demaille  <demaille@gostai.com>

	Less new (but not older)