@@ -1,5 +1,10 @@
 2007-02-14  Akim Demaille  <akim.demaille@free.fr>
 
+	Use &, not *
+	* src/uobject.cc: to alias the ghost connection.
+
+2007-02-14  Akim Demaille  <akim.demaille@free.fr>
+
 	Cleaning
 	* src/uobject.cc: Spaces, identifiers, scopes.
 
